Integrate R5 network pruning w/ NetworkCoordinator (untested)